fix pre overflow

--- a/themes/positron/style.css
+++ b/themes/positron/style.css
@@ -116,6 +116,7 @@ pre {
     color: #4a4a4a;
     background-color: #ebebeb;
     padding: 6px;
+    overflow-x: auto;
 }
 .notices code, .notices pre {
     background-color: #dbdbdb;
@@ -211,6 +212,9 @@ blockquote {
     padding: 10px 0px 10px 20px;
     color: var(--color-content);
     font-family: var(--font-content-text);
+    /* This causes x-overflowing pre elements to behave when using #{heading} in url
+       to navigate to a subheading */
+    min-width: 0;
 }
 .content-container ul {
     line-height: 24px;
